Adding exploration.. evaluated

--- a/project/JSON Exploration.ipynb
+++ b/project/JSON Exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,17 +511,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import *\n",
-    "from pyspark import SparkContext, SQLContext"
+    "from pyspark import SparkContext, SQLContext\n",
+    "from pyspark.sql.functions import regexp_replace, col, lower, explode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,16 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyspark.sql.functions import regexp_replace, col, lower"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,11 +547,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask = (df._source.lang == 'en') | (df._source.lang == 'fr') | (df._source.lang == 'de')"
+    "# df.dtypes # we only care about the inner nested types in ._source"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.select('_source.*') #remove nesting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#columns we care about\n",
+    "columns = ['main', 'published', 'source_spam_probability', 'source_location', 'tags', 'lang', 'sentiment',\n",
+    "                   'author_gender', 'source_followers', 'source_following']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = (df.lang == 'en') | (df.lang == 'fr') | (df.lang == 'de')\n",
+    "df = df.filter(mask)  #gets tweets with right language\n",
+    "df = df.filter(df.sentiment != 'POSITIVE') #remove positive sentient tweets\n",
+    "df = df.filter(df.source_spam_probability < 0.5) #remove spam\n",
+    "df = df.withColumn('main', lower(df.main)) #get lower case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.withColumn('main', regexp_replace(col('main'), 'pic.twitter\\S+', ' ')) #remove picture urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.filter(~(df.main.contains('http'))).filter(~(df.main.contains('.com'))).filter(~(df.main.contains('.ch'))).filter(~(df.main.contains('www')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.filter(df.main.isin('lol'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'map'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-139-e82d8dd0f2e8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'main'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdict_filter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda/lib/python3.6/site-packages/pyspark/sql/dataframe.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1018\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1019\u001b[0m             raise AttributeError(\n\u001b[0;32m-> 1020\u001b[0;31m                 \"'%s' object has no attribute '%s'\" % (self.__class__.__name__, name))\n\u001b[0m\u001b[1;32m   1021\u001b[0m         \u001b[0mjc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1022\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mColumn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'map'"
+     ]
+    }
+   ],
+   "source": [
+    "df.select('main').map(dict_filter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(main='en espérant que 2016 soit meilleur que 2015 quand même'),\n",
+       " Row(main='nice bmw ...he kills ant s!!!  '),\n",
+       " Row(main='@madmenna ich hab nichts dagegen, wenn mir andere beim saufen zuschauen, solange sie pro minute 5.- zahlen. @deinwoelfchen'),\n",
+       " Row(main='@ietsist dank je. heel veel lieve nieuwjaarswensen terug aan jullie allemaal. net terug na een leuk feest in belgië zonder internet.'),\n",
+       " Row(main='happy new jear!!!! i am back from 2 weeks cuba! let s go into the 2016!  '),\n",
+       " Row(main='@megadriver16 bonne année à toi je prends beaucoup de plaisir à suivre tes vidéos je suis un grand fande tour de france merci continue ainsi'),\n",
+       " Row(main='@sweaggygirl oh la la'),\n",
+       " Row(main=\"putain j'ai maaaal au crane la\"),\n",
+       " Row(main=\"@claudiocolu alla fine gn simm #b'ccat ️\"),\n",
+       " Row(main='so, das ist ein kleiner teil von bangkok  '),\n",
+       " Row(main=\"gister was de trein reis van belgie naar nederland wel echt de allergrootste ramp ooit. :')\"),\n",
+       " Row(main='beauty is around  '),\n",
+       " Row(main='neujahrsmorgen, zehn uhr und ich habe bereits den küchenboden gewischt. was ist mit mir passiert?'),\n",
+       " Row(main=\"@miss_r i got a bit blindsided, too ^_^'''\"),\n",
+       " Row(main=\"tellement que j'ai une équipe banaf sur fut, quand je fais le draft c'est trop fluide pour moi j'arrive pas à jouer\")]"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.select('main').head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.write.json('reduced_tweets') #write dataframe to folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.coalesce(1).write.json('reduced_tweets2') #write just one file instead of multiple! :D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets = df.toPandas() #turns it into pandas df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "en    3755\n",
+       "fr    3026\n",
+       "de    1950\n",
+       "Name: lang, dtype: int64"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweets.lang.value_counts() #not that many german/germanic tweets, lots of spanish etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dict_filter(word):\n",
+    "    found = False\n",
+    "    for w in ['lol', 'depri', 'na']:\n",
+    "        if( w in word):\n",
+    "            found = True\n",
+    "    return found"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# f = df.select(regexp_replace(col('main'), 'http\\S+|www.\\S+', ' ').alias('filtered'))"
    ]
   },
   {
@@ -568,7 +758,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.filter(mask) #gets tweets with right language"
+    "# f = f.select(regexp_replace(col('filtered'), '.*[\\r\\n]', ' ').alias('filtered'))"
    ]
   },
   {
@@ -577,97 +767,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.filter(df._source.sentiment != 'POSITIVE')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.filter(df._source.source_spam_probability < 0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lol = df.select('_source.main').filter(~(df._source.main.contains('.ch')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = df.select(lower(df._source.main).alias('d')) #get lower case"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = d.filter(~(d.d.contains('.ch')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = df.select(regexp_replace(col('_source.main'), 'http\\S+|www.\\S+', ' ').alias('filtered'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = f.select(regexp_replace(col('filtered'), 'pic.twitter\\S+', ' ').alias('filtered'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = f.select(regexp_replace(col('filtered'), '.*[\\r\\n]', ' ').alias('filtered'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2 = df.withColumn(\"_source.main\", regexp_replace('_source.main', \"http\\S+|www.\\S+\", \" \"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "main = df.select('_source.main').withColumn(\"main\", regexp_replace('main', \"http\\S+|www.\\S+\", \" \"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d.write.json('reduced_file')"
+    "# main = df.select('_source.main').withColumn(\"main\", regexp_replace('main', \"http\\S+|www.\\S+\", \" \"))"
    ]
   }
  ],
