--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -193,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.3 train SVD classifier"
+    "### 4.3 train SVM classifier"
    ]
   },
   {
@@ -218,6 +218,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 6. Conclusions"
    ]
@@ -233,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://github.com/master/spark-stemming"
+    "[1] https://github.com/master/spark-stemming"
    ]
   },
   {
