--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -213,7 +213,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "LDA to find similarities"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,6 +255,27 @@
    "metadata": {},
    "source": [
     "https://spark.apache.org/docs/2.1.0/ml-features.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://nadbordrozd.github.io/blog/2016/05/20/text-classification-with-word2vec/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.rand.org/content/dam/rand/pubs/rgs_dissertations/RGSD300/RGSD391/RAND_RGSD391.pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.aaai.org/ocs/index.php/ICWSM/ICWSM11/paper/viewFile/2880/3264"
    ]
   },
   {
